Updated schema and created hosted API endpoint at /docs (#8)
